fix--butao escurece, add filter:contrast no button:hover

--- a/semana-2/bugfixes/index.css
+++ b/semana-2/bugfixes/index.css
@@ -25,6 +25,10 @@ button:focus {
     color: white;
 }
 
+button:hover{
+    filter: contrast(30%);
+}
+
 img {
     width: 100px;
 }
